hasta validación de formulario simple

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,9 @@
 <h1>ErrorNote</h1>
 <nav>
     Ir a: 
-    <a routerLink="/register" routerLinkActive="active">Registro</a> | 
-    <a routerLink="/search" routerLinkActive="active">Busqueda</a> | 
-    <a routerLink="/comment" routerLinkActive="active">Comentarios</a>
+    <a routerLink="/notes/register" routerLinkActive="active">Registro</a> | 
+    <a routerLink="/notes/search" routerLinkActive="active">Busqueda</a> | 
+    <a routerLink="/notes/comment" routerLinkActive="active">Comentarios</a>
 </nav>
 <router-outlet></router-outlet>
 <h1>Footer</h1>
