--- a/src/app/notes/pages/register/register.component.html
+++ b/src/app/notes/pages/register/register.component.html
@@ -1,47 +1,49 @@
 <div class="container">
   <h1>Registrar usuario</h1>
-  <form #registerForm="ngForm">
+  <form [formGroup]="registerForm">
     <div class="form-group">
       <label for="name">Nombre</label>
-      <input type="text" class="form-control" id="name" required [(ngModel)]="user.name" #name="ngModel" name="name">
-      <div *ngIf="name.errors?.required" class="alert alert-danger">
-        Valor requerido
+      <input type="text" class="form-control" id="name" name="name" formControlName="name">
+      <div *ngIf="hasError('name')" class="alert alert-danger">
+        {{messageError('name')}}
       </div>
     </div>
     <div class="form-group">
       <label for="lastname">Apellido</label>
-      <input type="text" class="form-control" id="lastname" [(ngModel)]="user.lastname" name="lastname">
+      <input type="text" class="form-control" id="lastname" name="lastname" formControlName="lastname">
     </div>
 
     <div class="form-group">
       <label for="username">Nombre de usuario</label>
-      <input type="text" class="form-control" id="username" required [(ngModel)]="user.username" #username="ngModel" name="username">
-      <div *ngIf="username.errors?.required" class="alert alert-danger">
-        Valor requerido
+      <input type="text" class="form-control" id="username" name="username" formControlName="username">
+      <div *ngIf="hasError('username')" class="alert alert-danger">
+        {{messageError('username')}}
       </div>
     </div>
 
     <div class="form-group">
       <label for="email">Email</label>
-      <input type="email" class="form-control" id="email" required [(ngModel)]="user.email" #email="ngModel"  name="email">
-      <div *ngIf="email.errors?.required" class="alert alert-danger">
-        Valor requerido
+      <input type="email" class="form-control" id="email" name="email" formControlName="email">
+      <div *ngIf="hasError('email')" class="alert alert-danger">
+        {{messageError('email')}}
       </div>
     </div>
 
     <div class="form-group">
       <label for="birthdate">Fecha de nacimiento</label>
-      <input type="date" class="form-control" id="birthdate" [(ngModel)]="user.birthdate" name="birthdate">
+      <input type="date" class="form-control" id="birthdate" name="birthdate" formControlName="birthdate">
     </div>
 
     <div class="form-group">
       <label for="gender">Género</label>
-      <select class="form-control" id="gender" required [(ngModel)]="user.gender" name="gender">
+      <select class="form-control" id="gender" name="gender" formControlName="gender">
         <option *ngFor="let gen of genders" [value]="gen">{{gen}}</option>
       </select>
     </div>
-
-    <button [disabled]="!registerForm.form.valid" type="submit" class="btn btn-success">Aceptar</button>
-
-  </form>
+    <p>
+      Valores del formulario: {{registerForm.value | json}}
+    </p>
+    <p>Estado del formulario: {{registerForm.status}}</p>
+    <button type="submit" [disabled]="!registerForm.valid" class="btn btn-success">Aceptar</button>
+  </form> 
 </div>
