clase 4 antes de ejercicio

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,2 @@
-<h1>Error Note</h1>
-<nav>
-    Ir a:
-    <a routerLink="/notes/register" routerLinkActive="active">Registro</a> |
-    <a routerLink="/notes/search" routerLinkActive="active">Busqueda</a> |
-    <a routerLink="/notes/comment" routerLinkActive="active">Comentarios</a>
- </nav>
-<router-outlet></router-outlet>
-<h1>Footer</h1>
+<app-enote-nav></app-enote-nav>
+<simple-notifications></simple-notifications>
