--- a/src/app/notes/pages/register/register.component.css
+++ b/src/app/notes/pages/register/register.component.css
@@ -1,9 +1,13 @@
-@import url('https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css');
-
-.ng-valid[required], .ng-valid.required  {
-    border-left: 5px solid #42A948; /* green */
-}
-
-.ng-invalid:not(form)  {
-    border-left: 5px solid #a94442; /* red */
-}
+.mat-card {
+    margin: 10px;
+ }
+ 
+ .container {
+    display: flex;
+    flex-direction: column;
+ }
+ 
+  .container > * {
+    width: 100%;
+ }
+ 
