--- a/src/app/notes/pages/register/register.component.html
+++ b/src/app/notes/pages/register/register.component.html
@@ -1,49 +1,47 @@
-<div class="container">
-  <h1>Registrar usuario</h1>
-  <form [formGroup]="registerForm">
-    <div class="form-group">
-      <label for="name">Nombre</label>
-      <input type="text" class="form-control" id="name" name="name" formControlName="name">
-      <div *ngIf="hasError('name')" class="alert alert-danger">
-        {{messageError('name')}}
+
+<mat-card>
+  <mat-card-title>Registrar usuario</mat-card-title>
+  <mat-card-content>
+    <form [formGroup]="registerForm">
+      <div class="container">
+        <mat-form-field>
+          <input matInput placeholder="Nombre" formControlName="name">
+          <mat-error *ngIf="hasError('name')">{{messageError('name')}}</mat-error>
+        </mat-form-field>
+ 
+        <mat-form-field>
+          <input matInput placeholder="Apellido" formControlName="lastname">
+          <mat-error *ngIf="hasError('lastname')">{{messageError('lastname')}}</mat-error>
+        </mat-form-field>
+ 
+        <mat-form-field>
+          <input matInput placeholder="Nombre de usuario" formControlName="username">
+          <mat-error *ngIf="hasError('username')">{{messageError('username')}}</mat-error>
+        </mat-form-field>
+ 
+        <mat-form-field>
+          <input type="email" matInput placeholder="Correo electrónico" formControlName="email">
+          <mat-error *ngIf="hasError('email')">{{messageError('email')}}</mat-error>
+        </mat-form-field>
+ 
+        <mat-form-field>
+          <input matInput [matDatepicker]="picker" placeholder="Fecha de Nacimiento" formControlName="birthdate">
+          <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+          <mat-datepicker #picker></mat-datepicker>
+        </mat-form-field>
+ 
+        <mat-form-field>
+          <mat-select placeholder="Genero" formControlName="gender">
+            <mat-option *ngFor="let gen of genders" [value]="gen">{{gen}}</mat-option>
+          </mat-select>
+        </mat-form-field>
+        <p>Valores del formulario: {{registerForm.value | json}}</p>
+        <p>Estado del formulario: {{registerForm.status}}</p>
       </div>
-    </div>
-    <div class="form-group">
-      <label for="lastname">Apellido</label>
-      <input type="text" class="form-control" id="lastname" name="lastname" formControlName="lastname">
-    </div>
-
-    <div class="form-group">
-      <label for="username">Nombre de usuario</label>
-      <input type="text" class="form-control" id="username" name="username" formControlName="username">
-      <div *ngIf="hasError('username')" class="alert alert-danger">
-        {{messageError('username')}}
-      </div>
-    </div>
-
-    <div class="form-group">
-      <label for="email">Email</label>
-      <input type="email" class="form-control" id="email" name="email" formControlName="email">
-      <div *ngIf="hasError('email')" class="alert alert-danger">
-        {{messageError('email')}}
-      </div>
-    </div>
-
-    <div class="form-group">
-      <label for="birthdate">Fecha de nacimiento</label>
-      <input type="date" class="form-control" id="birthdate" name="birthdate" formControlName="birthdate">
-    </div>
-
-    <div class="form-group">
-      <label for="gender">Género</label>
-      <select class="form-control" id="gender" name="gender" formControlName="gender">
-        <option *ngFor="let gen of genders" [value]="gen">{{gen}}</option>
-      </select>
-    </div>
-    <p>
-      Valores del formulario: {{registerForm.value | json}}
-    </p>
-    <p>Estado del formulario: {{registerForm.status}}</p>
-    <button type="submit" [disabled]="!registerForm.valid" class="btn btn-success">Aceptar</button>
-  </form> 
-</div>
+    </form>
+  </mat-card-content>
+  <mat-card-actions>
+    <button [disabled]="!registerForm.valid" (click)="onAction()" type="submit" mat-raised-button color="primary" >Aceptar</button>
+  </mat-card-actions>
+ </mat-card>
+ 
