antes ejercicio clase4

--- a/src/app/core/enote-nav/enote-nav.component.html
+++ b/src/app/core/enote-nav/enote-nav.component.html
@@ -6,6 +6,7 @@
       <a mat-list-item routerLink="/notes/register" routerLinkActive="active">Registro</a>
       <a mat-list-item routerLink="/notes/search" routerLinkActive="active">Búsqueda</a>
       <a mat-list-item routerLink="/notes/comment" routerLinkActive="active">Comentarios</a>
+      <a mat-list-item routerLink="/notes/note-reg" routerLinkActive="active">Registrar Nota</a>
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
