--- a/src/app/core/enote-nav/enote-nav.component.html
+++ b/src/app/core/enote-nav/enote-nav.component.html
@@ -1,17 +1,17 @@
 <mat-sidenav-container class="sidenav-container">
-  <mat-sidenav #drawer class="sidenav" fixedInViewport="true" [attr.role]="(isHandset$ | async) ? 'dialog' : 'navigation'"
+  <mat-sidenav #drawer class="sidenav mat-elevation-z4" fixedInViewport="true" [attr.role]="(isHandset$ | async) ? 'dialog' : 'navigation'"
     [mode]="(isHandset$ | async) ? 'over' : 'side'" [opened]="!(isHandset$ | async)">
     <mat-toolbar color="primary">Menu</mat-toolbar>
     <mat-nav-list>
-      <a mat-list-item routerLink="/notes/register" routerLinkActive="active">Registro</a>
-      <a mat-list-item routerLink="/notes/search" routerLinkActive="active">Búsqueda</a>
-      <a mat-list-item routerLink="/notes/comment" routerLinkActive="active">Comentarios</a>
-      <a mat-list-item routerLink="/notes/note-reg" routerLinkActive="active">Registrar Nota</a>
+      <a mat-list-item routerLink="/notes/register" routerLinkActive="active-menu mat-elevation-z0">Registro</a>
+      <a mat-list-item routerLink="/notes/search" routerLinkActive="active-menu mat-elevation-z0">Búsqueda</a>
+      <a mat-list-item routerLink="/notes/comment" routerLinkActive="active-menu mat-elevation-z0">Comentarios</a>
+      <a mat-list-item routerLink="/notes/note-reg" routerLinkActive="active-menu mat-elevation-z0">Registrar Nota</a>
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
     <mat-toolbar class="mat-elevation-z4 fixed-header" color="primary">
-      <button type="button" aria-label="Toggle sidenav" mat-icon-button (click)="drawer.toggle()" *ngIf="isHandset$ | async">
+      <button type="button" aria-label="Toggle sidenav" mat-icon-button (click)="drawer.toggle()" >
         <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
       </button>
       <span>error-note</span>
