--- a/src/app/core/enote-nav/enote-nav.component.html
+++ b/src/app/core/enote-nav/enote-nav.component.html
@@ -3,10 +3,10 @@
     [mode]="(isHandset$ | async) ? 'over' : 'side'" [opened]="!(isHandset$ | async)">
     <mat-toolbar color="primary">Menu</mat-toolbar>
     <mat-nav-list>
-      <a mat-list-item routerLink="/notes/register" routerLinkActive="active">Registro</a>
-      <a mat-list-item routerLink="/notes/search" routerLinkActive="active">Búsqueda</a>
-      <a mat-list-item routerLink="/notes/comment" routerLinkActive="active">Comentarios</a>
-      <a mat-list-item routerLink="/notes/note-reg" routerLinkActive="active">Registrar Nota</a>
+      <a mat-list-item routerLink="/notes/register" routerLinkActive="active-menu">Registro</a>
+      <a mat-list-item routerLink="/notes/search" routerLinkActive="active-menu">Búsqueda</a>
+      <a mat-list-item routerLink="/notes/comment" routerLinkActive="active-menu">Comentarios</a>
+      <a mat-list-item routerLink="/notes/note-reg" routerLinkActive="active-menu">Registrar Nota</a>
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
