--- a/src/app/core/enote-nav/enote-nav.component.html
+++ b/src/app/core/enote-nav/enote-nav.component.html
@@ -4,17 +4,20 @@
     <mat-toolbar color="primary">Menu</mat-toolbar>
     <mat-nav-list>
       <a mat-list-item routerLink="/notes/register" routerLinkActive="active-menu mat-elevation-z0">Registro</a>
-      <a mat-list-item routerLink="/notes/search" routerLinkActive="active-menu mat-elevation-z0">Búsqueda</a>
-      <a mat-list-item routerLink="/notes/comment" routerLinkActive="active-menu mat-elevation-z0">Comentarios</a>
-      <a mat-list-item routerLink="/notes/note-reg" routerLinkActive="active-menu mat-elevation-z0">Registrar Nota</a>
+      <a *ngIf="isAuthenticated" mat-list-item routerLink="/notes/search" routerLinkActive="active-menu mat-elevation-z0">Búsqueda</a>
+      <a *ngIf="isAuthenticated" mat-list-item routerLink="/notes/comment" routerLinkActive="active-menu mat-elevation-z0">Comentarios</a>
+      <a *ngIf="isAuthenticated" mat-list-item routerLink="/notes/note-reg" routerLinkActive="active-menu mat-elevation-z0">Registrar Nota</a>
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
     <mat-toolbar class="mat-elevation-z4 fixed-header" color="primary">
-      <button type="button" aria-label="Toggle sidenav" mat-icon-button (click)="drawer.toggle()" >
+      <button type="button" aria-label="Toggle sidenav" mat-icon-button (click)="drawer.toggle()">
         <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
       </button>
       <span>error-note</span>
+      <span class="example-spacer"></span>
+      <button mat-raised-button *ngIf="!isAuthenticated" routerLink="/login">Login</button>
+      <button mat-raised-button *ngIf="isAuthenticated" (click)="logout()">Logout</button>
     </mat-toolbar>
     <!-- Add Content Here -->
     <div class="inner-sidenav-content">
