Uso de librería

--- a/src/app/core/enote-nav/enote-nav.component.html
+++ b/src/app/core/enote-nav/enote-nav.component.html
@@ -22,6 +22,7 @@
     <!-- Add Content Here -->
     <div class="inner-sidenav-content">
       <router-outlet></router-outlet>
+      <enl-enote-lib></enl-enote-lib>
     </div>
   </mat-sidenav-content>
 </mat-sidenav-container>
